--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -2,19 +2,14 @@
   <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
     <div class="container-fluid px-3">
         <nav aria-label="breadcrumb">
-          <ol class="breadcrumb bg-transparent mb-0 pb-1 px-0 me-sm-6 me-12">
-            <li class="breadcrumb-item"><a class="opacity-8 text-dark" href="javascript:;">Dashboard</a></li>
-            <li class="breadcrumb-item text-dark active" aria-current="page">
-              Dashboard
-            </li>
-          </ol>
+            <h6 dir="rtl"><small> نرم افزار مدیریت فروش و ارتباط با مشتریان AtroCRM </small></h6>
         </nav>
         <div class="collapse navbar-collapse me-md-0 me-4" id="navbar">
           <ul class="navbar-nav mb-2 mb-sm-0 ms-sm-auto justify-content-sm-end">
             <li class="nav-item d-flex align-items-center">
               <a href="{% url 'logout' %}"
                  class="nav-link text-body text-uppercase font-weight-bold px-0">
-                Logout
+                خروج
               </a>
             </li>
             <li class="nav-item d-xl-none ps-4 d-flex align-items-center">
