--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -2,8 +2,8 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute right-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="/">
-        <img src="/static/assets/img/logo-ct.png" class="navbar-brand-img h-100 w-15" alt="...">
-        <span class="ms-1 font-weight-bold">Soft UI Dashboard</span>
+        <img src="/static/assets/img/crmlogo.png" class="navbar-brand-img h-150 w-25" alt="...">
+        <span class="ms-1 font-weight-bold"> آتـــروتـک </span>
       </a>
     </div>
     <hr class="horizontal dark mt-0">
