--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -4,9 +4,9 @@
       <div class="col-12">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg  blur blur-rounded top-0  z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
-          <div class="container-fluid">
-            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/">
-              Soft UI Dashboard
+          <div class="container-fluid" >
+            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/" dir="rtl">
+                    نرم افزار مدیریت فروش و ارتباط با مشتریان AtroCRM
             </a>
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon mt-2">
@@ -32,7 +32,7 @@
               </ul>
               <ul class="navbar-nav d-lg-block d-none">
                 <li class="nav-item">
-                  <a target="_blank" href="https://appseed.us/product/django-soft-ui-dashboard-pro" 
+                  <a target="_blank" href="https://appseed.us/product/django-soft-ui-dashboard-pro"
                      class="btn btn-sm btn-round mb-0 me-1 bg-gradient-primary">PRO Version</a>
                 </li>
               </ul>
