--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -1,17 +1,20 @@
   <footer class="footer py-4 fixed-bottom">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mb-4 mx-auto text-center">
-          <a href="https://bit.ly/3fKQZaL" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            Creative-Tim
-          </a>
-          <a href="https://appseed.us" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            AppSeed
-          </a>
-          <a href="https://appseed.us/product/django-soft-ui-dashboard" target="_blank" 
-             class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            Product
-          </a>
+    <div class="container-fluid">
+      <div class="row align-items-center justify-content-lg-between">
+        <div class="col-lg-6 mb-lg-0 mb-4">
+          <div class="copyright text-center text-sm text-muted text-lg-left">
+            &copy;
+            <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">2021</a>
+            - coded by <a target="_blank" href="https://Atrotech.ir">Atrotech</a>.
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <ul class="nav nav-footer justify-content-center justify-content-lg-end">
+            <li class="nav-item">
+              <a href="https://appseed.us/product/django-soft-ui-dashboard"
+                 class="nav-link text-muted" target="_blank">آتـــروتـک</a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
