--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -103,8 +103,8 @@
         </div>
         <div class="ms-md-auto ps-md-3 d-flex align-items-center">
           <div class="bg-white border-radius-lg d-flex">
-            <input type="text" class="form-control border-0 ps-3" placeholder="Type here...">
-            <button class="btn bg-gradient-primary my-1 me-1">Search</button>
+            <input type="text" class="form-control border-0 ps-3" placeholder="اینجا تایپ کنید...">
+            <button class="btn bg-gradient-primary my-1 me-1">جستجو</button>
           </div>
         </div>
     </div>
