--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -51,7 +51,7 @@
         </li>
 
         <li class="nav-item mb-1">
-          <a class="nav-link {% if 'products' in segment %} active {% endif %}" href="/products.html">
+          <a class="nav-link {% if request.path == '/products' %} active {% endif %}" href="{% url 'products' %}">
             <div class="icon icon-shape icon-xs shadow border-radius-sm bg-gradient-light text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>محصولات</title>
