--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -22,7 +22,7 @@
               </a>
             </li>
             <li class="nav-item px-4 d-flex align-items-center">
-              <a href="javascript:;" class="nav-link text-body p-0">
+              <a href="{% url 'admin:index' %}" class="nav-link text-body p-0">
                 <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
               </a>
             </li>
