--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -72,10 +72,10 @@
         </li>
 
         <li class="nav-item mb-1">
-          <a class="nav-link {% if 'rtl' in segment %} active {% endif %}" href="/rtl.html">
+          <a class="nav-link {% if request.path == '/customers' %} active {% endif %}" href="{% url 'customers' %}">
             <div class="icon icon-shape icon-xs shadow border-radius-sm bg-gradient-light text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <title>settings</title>
+                <title>مشتریان</title>
                 <g id="Basic-Elements" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                   <g id="Rounded-Icons" transform="translate(-2020.000000, -442.000000)" fill="#FFFFFF" fill-rule="nonzero">
                     <g id="Icons-with-opacity" transform="translate(1716.000000, 291.000000)">
@@ -89,7 +89,7 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1">RTL</span>
+            <span class="nav-link-text ms-1"> مشتریان </span>
           </a>
         </li>
         <li class="nav-item mt-3">
