--- a/apps/templates/home/customer_detail.html
+++ b/apps/templates/home/customer_detail.html
@@ -22,6 +22,15 @@
             <div class="h-100">
               <h5 class="mb-1">
                  {{ customer.name }}
+
+                 <small>
+                 {% if Customer.substantial %}
+                   <span class="badge badge-sm bg-gradient-success"> substantial </span>
+                 {% else %}
+                   <span class="badge badge-sm bg-gradient-warning"> no substantial </span>
+                 {% endif %}
+                 </small>
+
               </h5>
               <p class="mb-0 font-weight-bold text-sm">
                 {{ customer.phone }}
@@ -36,6 +45,125 @@
         </div>
       </div>
 
+
+
+
+
+
+      <br><br>
+
+
+      <div class="row" dir="rtl">
+
+        <div class="col-12">
+          <div class="card mb-4">
+            <div class="card-header pb-0">
+              <h6> سفارشات این مشتری: </h6>
+            </div>
+            <div class="card-body px-0 pt-0 pb-2">
+              <div class="table-responsive p-0">
+                <table class="table align-items-center mb-0">
+                  <thead>
+                    <tr>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">  </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> محصول </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> تعداد </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> وضعیت </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> کارشناس فروش </th>
+                      <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> تاریخ </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                   {% for Order_request in reqs %}
+                    <tr>
+                      <td>
+                        <div class="d-flex px-2 py-1">
+                          <div class="d-flex flex-column justify-content-center">
+                            <a href="{{ Order_request.get_absolute_url }}">
+                              <h6 class="mb-0 text-sm">
+                                <img src="/static/assets/img/user.png" class="avatar avatar-sm me-3">
+                             </h6>
+                           </a>
+                          </div>
+                        </div>
+                      </td>
+
+                      <td class="align-middle text-center text-sm">
+                        <p class="text-xs text-secondary mb-0"> <img src="{{ Order_request.product.image.url }}" class="avatar avatar-sm me-3"> {{ Order_request.product.name }} </p>
+                      </td>
+
+                      <td class="align-middle text-center">
+                        <p class="text-xs text-secondary mb-0"> {{ Order_request.qty }} عدد </p>
+                      </td>
+
+                      <td class="align-middle text-center">
+                        {% if Order_request.status == 'تکمیل شده' %}
+                          <span class="badge badge-sm bg-gradient-success"> تکمیل شده </span>
+                        {% elif Order_request.status == 'لغو شده' %}
+                          <span class="badge badge-sm bg-gradient-danger"> لغو شده </span>
+                        {% elif Order_request.status == 'دریافت پیش پرداخت' %}
+                          <span class="badge badge-sm bg-gradient-info"> دریافت پیش پرداخت </span>
+                        {% else %}
+                          <span class="badge badge-sm bg-gradient-warning"> در حال بررسی </span>
+                        {% endif %}
+                      </td>
+
+                      <td class="align-middle text-center">
+                        <p class="text-xs text-secondary mb-0"> {{ Order_request.user }} </p>
+                      </td>
+
+
+                      <td class="align-middle text-center">
+                        <p class="text-xs text-secondary mb-0"> {{ Order_request.date_created }} </p>
+                      </td>
+
+                    </tr>
+                   {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="card mb-4">
+            <div class="card-header pb-0 p-3">
+              <h6 class="mb-1">   محصولات مورد توجه این مشتری </h6>
+            </div>
+            <div class="card-body p-3">
+              <div class="row">
+                {% for product_tag in customer.product_tag.all %}
+                  <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
+                    <div class="card card-blog card-plain">
+                      <div class="position-relative">
+                        <a href="{{ product_tag.get_absolute_url }}" class="d-block shadow-xl border-radius-xl">
+                          <img src="{{ product_tag.image.url }}" alt="{{ product_tag.name }}" class="img-fluid shadow border-radius-xl">
+                        </a>
+                      </div>
+                      <div class="card-body px-1 pb-0 text-center">
+                        <a href="{{ product_tag.get_absolute_url }}"> <p> <small> {{ product_tag.name }} </small> </p> </a>
+                      </div>
+                    </div>
+                  </div>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+
+
+
+
+
+
+
+
+
       {% include "includes/footer.html" %}
 
     </div>
@@ -43,16 +171,4 @@
 {% endblock content %}
 
 <!-- Specific JS goes HERE -->
-{% block javascripts %}
-
-  <script>
-    var win = navigator.platform.indexOf('Win') > -1;
-    if (win && document.querySelector('#sidenav-scrollbar')) {
-      var options = {
-        damping: '0.5'
-      }
-      Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
-    }
-  </script>
-
-{% endblock javascripts %}
+{% block javascripts %} {% endblock javascripts %}
