--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -86,6 +86,18 @@
                 </div>
               </div>
               {% endfor %}
+
+              <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
+                <div class="card h-100 card-plain border">
+                  <div class="card-body d-flex flex-column justify-content-center text-center">
+                    <a href="javascript:;">
+                      <i class="fa fa-plus text-secondary mb-3"></i>
+                      <h5 class=" text-secondary"> افزودن یک گام جدید </h5>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
