--- a/apps/templates/includes/fixed-plugin.html
+++ b/apps/templates/includes/fixed-plugin.html
@@ -23,9 +23,9 @@
         </div>
         <a href="javascript:void(0)" class="switch-trigger background-color">
           <div class="badge-colors my-2 text-start">
-            <span class="badge filter bg-gradient-primary active" data-color="primary" onclick="sidebarColor(this)"></span>
+            <span class="badge filter bg-gradient-primary " data-color="primary" onclick="sidebarColor(this)"></span>
             <span class="badge filter bg-gradient-dark" data-color="dark" onclick="sidebarColor(this)"></span>
-            <span class="badge filter bg-gradient-info" data-color="info" onclick="sidebarColor(this)"></span>
+            <span class="badge filter bg-gradient-info active" data-color="info" onclick="sidebarColor(this)"></span>
             <span class="badge filter bg-gradient-success" data-color="success" onclick="sidebarColor(this)"></span>
             <span class="badge filter bg-gradient-warning" data-color="warning" onclick="sidebarColor(this)"></span>
             <span class="badge filter bg-gradient-danger" data-color="danger" onclick="sidebarColor(this)"></span>
@@ -49,9 +49,9 @@
           <input class="form-check-input mt-1 ms-auto" type="checkbox" id="navbarFixed" onclick="navbarFixed(this)">
         </div>
         <hr class="horizontal dark my-sm-4">
-        <a target="_blank" class="btn bg-gradient-dark w-100" 
+        <a target="_blank" class="btn bg-gradient-dark w-100"
            href="https://github.com/app-generator/django-soft-ui-dashboard">Free download</a>
-        <a target="_blank" class="btn bg-gradient-light w-100" 
+        <a target="_blank" class="btn bg-gradient-light w-100"
            href="https://appseed.us">AppSeed</a>
       </div>
     </div>
