--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -4,26 +4,10 @@
       <div class="col-12">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg  blur blur-rounded top-0  z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
-          <div class="container-fluid">
-            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/">
-               AtroCRM
-            </a>
-            <div class="collapse navbar-collapse" id="navigation">
-              <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                  <a class="nav-link me-2" href="{% url 'login' %}">
-                    <i class="fas fa-key text-dark me-2"></i>
-                     ورود
-                  </a>
-                </li>
-              </ul>
-              <ul class="navbar-nav d-lg-block d-none">
-                <li class="nav-item">
-                  <a target="_blank" href="https://appseed.us/product/django-soft-ui-dashboard-pro"
-                     class="btn btn-sm btn-round mb-0 me-1 bg-gradient-primary"> آتـــروتـک </a>
-                </li>
-              </ul>
-            </div>
+          <div class="container-fluid" align="center">
+            <h6 class="text-info text-gradient" dir="rtl">
+              نرم افزار مدیریت فروش و ارتباط با مشتریان AtroCRM
+            </h6>
           </div>
         </nav>
         <!-- End Navbar -->
