--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -5,14 +5,14 @@
           <div class="copyright text-center text-sm text-muted text-lg-left">
             &copy;
             <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">2021</a>
-            - coded by <a target="_blank" href="https://Atrotech.ir">Atrotech</a>.
+            -  <a target="_blank" href="https://Atrotech.ir">Atrotech</a>.
           </div>
         </div>
         <div class="col-lg-6">
           <ul class="nav nav-footer justify-content-center justify-content-lg-end">
             <li class="nav-item">
               <a href="https://appseed.us/product/django-soft-ui-dashboard"
-                 class="nav-link text-muted" target="_blank">آتـــروتـک</a>
+                 class="nav-link text-muted" target="_blank"> افق سازان فناوری آترو ( آتـــروتـک ) </a>
             </li>
           </ul>
         </div>
