--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -1,17 +1,11 @@
 
   <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
-    <div class="container-fluid px-3">
+    <div class="container-fluid px-3" style="display:flex;">
         <nav aria-label="breadcrumb">
             <h6 dir="rtl"><small> نرم افزار مدیریت فروش و ارتباط با مشتریان AtroCRM </small></h6>
         </nav>
         <div class="collapse navbar-collapse me-md-0 me-4" id="navbar">
           <ul class="navbar-nav mb-2 mb-sm-0 ms-sm-auto justify-content-sm-end">
-            <li class="nav-item d-flex align-items-center">
-              <a href="{% url 'logout' %}"
-                 class="nav-link text-body text-uppercase font-weight-bold px-0">
-                خروج
-              </a>
-            </li>
             <li class="nav-item d-xl-none ps-4 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
                 <div class="sidenav-toggler-inner">
@@ -104,7 +98,7 @@
         <div class="ms-md-auto ps-md-3 d-flex align-items-center">
           <div class="bg-white border-radius-lg d-flex">
             <input type="text" class="form-control border-0 ps-3" placeholder="اینجا تایپ کنید...">
-            <button class="btn bg-gradient-primary my-1 me-1">جستجو</button>
+            <button class="btn bg-gradient-info my-1 me-1">جستجو</button>
           </div>
         </div>
     </div>
