--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
 
   <title>
-    Django Soft UI Dashboard - {% block title %}{% endblock %} | AppSeed
+    AtroCRM {% block title %}{% endblock %} |
   </title>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
